updated meta tag to work with formspree

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" name="referrer" content="origin" />
     <title>Super Simple Call Recorder</title>
     <style type="text/css">
     .tk-myriad-pro {
