add use case subtitle

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <!-- Title -->
 <div class="container">
     <h1>Super Simple Call Recorder</h1>
-    <h3 class="light">Record phone calls without downloading or signing up for anything</h3>
+    <h3 class="light">Record phone calls without downloading or signing up for anything.<br>Useful for user research, saving legal calls, support calls, etc.</h3>
+    <h3 class="light"></h3>
 </div>
 
 <!-- How to -->
