--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li>People cannot call you back (good and bad...)</li>
     </ul>
     <h3><a href="mailto:?subject=Super Simple Call Recorder Pro&body=Let me know when it's ready! I would use it for: %0A%0AThe most important features to me are: ">Let me know</a> if you want a Pro version:</h3>
+    <div class="hint">(or have any other ideas/feedback!)</a></div>
     <ul>
         <li>Unlimited recordings</li>
         <li>Get recordings via email so you can use landline phones</li>
